export const snapshot = {};

snapshot[`url and htmlUrl update href 1`] = `2`;

snapshot[`url and htmlUrl update href 2`] = `
{
  formats: [
    {
      engines: 1,
      ext: ".tmpl.ts",
      pageLoader: [AsyncFunction: module],
    },
    {
      engines: 1,
      ext: ".tmpl.js",
      pageLoader: [AsyncFunction: module],
    },
    {
      engines: undefined,
      ext: ".tmpl.json",
      pageLoader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: undefined,
      ext: ".json",
    },
    {
      engines: 1,
      ext: ".md",
      pageLoader: [AsyncFunction: text],
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".js",
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".ts",
    },
    {
      componentLoader: [AsyncFunction: text],
      engines: 1,
      ext: ".njk",
      includesPath: "_includes",
      pageLoader: [AsyncFunction: text],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: undefined,
      ext: ".yaml",
      pageLoader: [AsyncFunction: yaml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: undefined,
      ext: ".yml",
      pageLoader: [AsyncFunction: yaml],
    },
  ],
}
`;

snapshot[`url and htmlUrl update href 3`] = `
[
]
`;

snapshot[`url and htmlUrl update href 4`] = `
{
  content: '
    <!DOCTYPE html>
    <html lang="en">
        <head>
            <title>Default Filter</title>
        </head>
        <body>
            <a id="url" href="https://example.com/test/url/">Url</a>
            <a id="htmlUrl" href="https://example.com/test/htmlUrl/">htmlUrl</a>
            <template>
              <h1>Template content</h1>
            </template>
        </body>
    </html>
  ',
  data: {
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    title: "Default Filter",
    url: "/default-filter/",
  },
  dest: {
    ext: ".html",
    path: "/default-filter/index",
  },
  src: {
    asset: undefined,
    ext: ".tmpl.js",
    path: "/default-filter",
    remote: undefined,
    slug: "default-filter",
  },
}
`;

snapshot[`url and htmlUrl update href 5`] = `
{
  content: '
    <!DOCTYPE html>
    <html lang="en">
        <head>
            <title>Renamed Filter</title>
        </head>
        <body>
            <a id="urlify" href="undefined">Urlify</a>
            undefined
        </body>
    </html>
  ',
  data: {
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    title: "Renamed Filter",
    url: "/renamed-filter/",
  },
  dest: {
    ext: ".html",
    path: "/renamed-filter/index",
  },
  src: {
    asset: undefined,
    ext: ".tmpl.js",
    path: "/renamed-filter",
    remote: undefined,
    slug: "renamed-filter",
  },
}
`;

snapshot[`configure url and htmlUrl names 1`] = `2`;

snapshot[`configure url and htmlUrl names 2`] = `
{
  formats: [
    {
      engines: 1,
      ext: ".tmpl.ts",
      pageLoader: [AsyncFunction: module],
    },
    {
      engines: 1,
      ext: ".tmpl.js",
      pageLoader: [AsyncFunction: module],
    },
    {
      engines: undefined,
      ext: ".tmpl.json",
      pageLoader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: undefined,
      ext: ".json",
    },
    {
      engines: 1,
      ext: ".md",
      pageLoader: [AsyncFunction: text],
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".js",
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".ts",
    },
    {
      componentLoader: [AsyncFunction: text],
      engines: 1,
      ext: ".njk",
      includesPath: "_includes",
      pageLoader: [AsyncFunction: text],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: undefined,
      ext: ".yaml",
      pageLoader: [AsyncFunction: yaml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: undefined,
      ext: ".yml",
      pageLoader: [AsyncFunction: yaml],
    },
  ],
}
`;

snapshot[`configure url and htmlUrl names 3`] = `
[
]
`;

snapshot[`configure url and htmlUrl names 4`] = `
{
  content: '
    <!DOCTYPE html>
    <html lang="en">
        <head>
            <title>Default Filter</title>
        </head>
        <body>
            <a id="url" href="undefined">Url</a>
            undefined
            <template>
              <h1>Template content</h1>
            </template>
        </body>
    </html>
  ',
  data: {
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    title: "Default Filter",
    url: "/default-filter/",
  },
  dest: {
    ext: ".html",
    path: "/default-filter/index",
  },
  src: {
    asset: undefined,
    ext: ".tmpl.js",
    path: "/default-filter",
    remote: undefined,
    slug: "default-filter",
  },
}
`;

snapshot[`configure url and htmlUrl names 5`] = `
{
  content: '
    <!DOCTYPE html>
    <html lang="en">
        <head>
            <title>Renamed Filter</title>
        </head>
        <body>
            <a id="urlify" href="https://example.com/urlify/">Urlify</a>
            <a id="htmlUrlify" href="https://example.com/htmlUrlify/">htmlUrlify</a>
        </body>
    </html>
  ',
  data: {
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    title: "Renamed Filter",
    url: "/renamed-filter/",
  },
  dest: {
    ext: ".html",
    path: "/renamed-filter/index",
  },
  src: {
    asset: undefined,
    ext: ".tmpl.js",
    path: "/renamed-filter",
    remote: undefined,
    slug: "renamed-filter",
  },
}
`;
